update to style sheet to fix unpleasant title wrapping on IE

--- a/doc/next/adk15notebook/aspectj-docs.css
+++ b/doc/next/adk15notebook/aspectj-docs.css
@@ -5,7 +5,8 @@ body {
 
 h1 {
   margin-bottom: 3px;
-  padding-bottom: 5px;
+  padding-bottom: 0px;
+  line-height: 1.1em;
 }
 
 h2 { 
@@ -35,7 +36,7 @@ tt tt {
   font-size: 100%;
  }
 
-.programlisting {
+.programlistng {
   padding-top: 5px; 
   border: 2px solid #ccc;
   background: #eee;
